# wasi-cycles

./: .env.local-example  LICENSE  README.md  test.sh
springboot-kafka-mongodb/: build.sh  pom.xml  run.sh
springboot-kafka-mongodb/src/main/java/com/example/springbootkafkamongodb/: SpringbootKafkaMongodbApplication.java
springboot-kafka-mongodb/src/main/java/com/example/springbootkafkamongodb/config/: MongoConfig.java  OracleDataSourceConfig.java  OracleKafkaConfig.java
springboot-kafka-mongodb/src/main/java/com/example/springbootkafkamongodb/controller/: AiController.java  CrossRuntimeMessagingController.java  OKafkaController.java  PlayerInfoController.java  TxEventQController.java
springboot-kafka-mongodb/src/main/java/com/example/springbootkafkamongodb/listener/: OKafkaMessageListener.java
springboot-kafka-mongodb/src/main/java/com/example/springbootkafkamongodb/model/: PlayerInfo.java  TxEventQMessage.java
springboot-kafka-mongodb/src/main/resources/: application.yaml
springboot-kafka-mongodb/src/test/java/com/example/springbootkafkamongodb/: SpringbootKafkaMongodbApplicationTests.java
sql/: wasi-cycles.sql  wasicycles-playerinfo-cleanup.sql  wasicycles-playerinfo-openapi.json  wasicycles-playerinfo.sql
threejs-frontend/: game.js  index.html  run.sh  server.js
wasmedge/: Cargo.toml  Dockerfile  build.sh  log.sh  run.sh  stop.sh
wasmedge/src/: main.rs
wasmer/: app.yaml  build.sh  run.sh
wasmer/src/: main.py
wasmtime/: Cargo.toml  build.sh  run.sh
wasmtime/src/: lib.rs
(+4 files in other folders)
